--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,17 +10,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 40px;
+  position: relative;
+  padding: 10px 40px 0px;
   background-color: #fff;
   border-bottom: 1px solid #ddd;
 }
 
 /* Logo Section */
 .navbar-logo {
-  width: 110px;
+  width: 100px;
 }
 
-.navbar-logo img {
+.brand-logo {
   width: 100%;
 }
 
@@ -30,17 +30,31 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 15px;
 }
 
 .primary-link {
   text-decoration: none;
-  font-size: 13px;
+  font-size: 14px;
   color: #000;
   font-weight: 700;
 }
 
 /* Utility Links and Search Bar */
 .navbar-utility-section {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 30px;
+  top: 5px;
+  align-items: flex-end;
+  gap: 10px; 
+}
+
+.utility-links {
   display: flex;
   align-items: center;
   gap: 20px;
@@ -49,7 +63,7 @@
 .utility-link {
   text-decoration: none;
   color: #000;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .language-switcher img {
@@ -60,13 +74,27 @@
 /* Search Bar */
 .search-container {
   display: flex;
+  padding-bottom: 15px;
+  padding-left: 35px;
   align-items: center;
+  width: 100%; /* Adjust width as needed */
 }
 
 .search-input {
   width: 280px;
   padding: 8px 10px;
+  font-size: 12px;
   border: none;
   background-color: rgba(235, 237, 238, 1);
-  border-radius: 4px;
+}
+
+.icons-search-bar {
+  width: 18px;
+  margin-left: -25px;
+  cursor: pointer;
+}
+
+.icons-bag {
+  width: 18px;
+  margin-left: 20px;
 }
