--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,66 @@
   width: 18px;
   margin-left: 20px;
 }
+
+/* Sale Banner */
+.sale-banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.sale-content {
+  position: relative;
+  width: 100%;
+  max-width: 1920px;
+}
+
+.brand-banner {
+  width: 100%;
+  height: auto;
+}
+
+.sale-info {
+  position: absolute;
+  left: 10%; 
+  bottom: 30%;
+  text-align: left;
+  color: #fff;
+}
+
+.event-sale {
+  display: block;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.sale-button {
+  background-color: #fff;
+  color: #000;
+  padding: 15px 70px 15px 15px;
+  font-size: 14px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.arrow-right {
+  position: absolute;
+  width: 30px;
+  bottom: 85px;
+  margin: -50px;
+
+
+}
+.terms {
+  display: block;
+  font-size: 14px;
+  font-weight: 600;
+  text-decoration: underline;
+  color: #ffffff;
+  margin-top: 10px;
+}
