--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@
 }
 
 .event-sale {
-  display: block;
+  display: flex;
   font-family: 'Poppins';
   font-size: 45px;
   font-weight: bold;
@@ -135,6 +135,7 @@
 }
 
 .sale-button {
+  display: flex;
   background-color: #fff;
   color: #000;
   padding: 15px 70px 15px 15px;
@@ -178,7 +179,10 @@
   cursor: pointer;
   transition: 0.2s;
 }
-
+.banner-description {
+  font-weight: 600;
+  margin-bottom: 20px;
+}
 .terms:hover {
   background-color: #000;
 }
