--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@
 
 .teaser-card {
   width: 320px;
-  height: 350px;
+  height: auto;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -261,4 +261,69 @@
 .teaser-link:hover {
   background-color: #000000;
   color: #fff;
+}
+
+/* Category Section */
+
+.category-section-container {
+  display: flex;
+  position: relative;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.category-content {
+  position: relative;
+  align-items: center;
+  margin: 10px;
+  justify-content: space-between;
+  width: 600px;
+  height: auto;
+}
+
+.category-media {
+  width: 100%;
+  height: 480px;
+}
+
+.category-button {
+  position: absolute;
+  left: 40%; 
+  bottom: 4%;
+  text-align: left;
+  color: #fff;
+}
+
+.button-section {
+  display: flex;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 15px 70px 15px 15px;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 10px;
+  z-index: 2;
+}
+
+.button-section::before {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  right: -4px;
+  bottom: 6px;
+  border: 1px solid #000000;
+}
+
+.right-white-arrow {
+  position: absolute;
+  width: 30px;
+  top: 60px;
+  right: 70px;
+  margin: -50px;
+  z-index: 2;
 }
