--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@
 
 .adidas-product-info {
   padding-left: 10px;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   text-align: left;
 }
 
@@ -482,6 +482,24 @@
   top: 10px;
   right: 20px;
   cursor: pointer;
+}
+
+.carousel-nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.carousel-button {
+  position: absolute;
+  bottom: 170px;
+  right: -1px;
+  padding: 0px 10px;
+  font-size: 25px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: #ffffff;
+  color: #000000;
+  border: solid 1px;
 }
 
 /* Adidas Info About */
